# Pictus

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  Readme.md  readme.txt
cmake/Modules/: FindWebP.cmake
source/: CMakeLists.txt  Pictus.sln
source/FilterTest/: CMakeLists.txt  FilterTest.vcproj  FilterTest.vcxproj  FilterTest.vcxproj.filters  StdAfx.h  main.cpp
source/Fuzzer/: Fuzzer.vcproj  Fuzzer.vcxproj  StdAfx.h  main.cpp
source/LoadTest/: CMakeLists.txt  LoadTest.vcproj  LoadTest.vcxproj  LoadTest.vcxproj.filters  main.cpp  w32_main.cpp
source/MetadataTest/: CMakeLists.txt  MetadataTest.vcxproj  MetadataTest.vcxproj.filters  main.cpp  main.h  test_exif_parser.cpp
source/PictThumbs/: ClassFactory.cpp  ClassFactory.h  DllRef.cpp  DllRef.h  PictThumbs.vcproj  PictThumbs.vcxproj  PictThumbs.vcxproj.filters  StdAfx.h  aStdAfx.h  codecsetup.cpp  codecsetup.h  cthumbprovider.cpp  cthumbprovider.h  dllmain.cpp  dllmain.h  regsetup.cpp  regsetup.h  regutils.cpp  regutils.h  res_pictthumbs.h  res_pictthumbs.rc  res_version.h  res_version.rc2
source/PictThumbsTest/: PictThumbsTest.vcproj  PictThumbsTest.vcxproj  PictThumbsTest.vcxproj.filters  StdAfx.h  main.cpp  test_cthumbprovider.cpp
source/Pictus/: CMakeLists.txt  PictInst.iss  Pictus.exe.manifest  Pictus.vcxproj  Pictus.vcxproj.filters  StdAfx.h  actionmap.cpp  actionmap.h  adjust.cpp  adjust.h  app_types.cpp  app_types.h  appreg.cpp  appreg.h  basewin.cpp  basewin.h  builder_viewport.cpp  builder_viewport.h  clipboard.cpp  clipboard.h  cnt_color_hls.cpp  cnt_color_hls.h  cnt_color_rgb.cpp  cnt_color_rgb.h  cnt_colorpick.cpp  cnt_colorpick.h  cnt_colorpreview.cpp  cnt_colorpreview.h  config.h  config_path.cpp  config_path.h  control.cpp  control.h  ctrl_button.cpp  ctrl_button.h  ctrl_combobox.cpp  ctrl_combobox.h  ctrl_combobox_entry.cpp  ctrl_combobox_entry.h  ctrl_editbox.cpp  (+224 more)
source/Pictus/Res/: bitmap_about_logo.psp  cursor_app_pan1.cur  cursor_app_pan2.cur  document.psp  icon_app1.psp  lang.json
source/Stresser/: BasicThread.cpp  BasicThread.h  CacheUser.cpp  CacheUser.h  FolderManipulator.cpp  FolderManipulator.h  FolderUser.cpp  FolderUser.h  Helper.cpp  Helper.h  Logger.cpp  Logger.h  StdAfx.h  Stresser.vcproj  Stresser.vcxproj  Stresser.vcxproj.filters  ThreadRunner.cpp  ThreadRunner.h  main.cpp  main.h
source/ThumbDisplay/: StdAfx.h  ThumbDisplay.vcproj  ThumbDisplay.vcxproj  ThumbDisplay.vcxproj.filters  main.cpp
source/illaTest/: CMakeLists.txt  StdAfx.h  common_codec.h  illaTest.vcproj  illaTest.vcxproj  illatest.vcxproj.filters  main.cpp  main.h  share_filterbuffer.cpp  share_filterbuffer.h  test_abstractcodec.cpp  test_bilinear.cpp  test_codecs.cpp  test_color.cpp  test_filter.cpp  test_filter_int.cpp  test_geom.cpp  test_image.cpp  test_render.cpp  test_resample.cpp  test_rotatefixed.cpp  test_rotatefixed_inplace.cpp  test_rotatefixed_query.cpp  test_surface.cpp
source/orzTest/: CMakeLists.txt  StdAfx.h  main.cpp  main.h  mt19937ar.h  orzTest.vcproj  orzTest.vcxproj  orztest.vcxproj.filters  test_bitconvert.cpp  test_file.cpp  test_fileops.cpp  test_folder.cpp  test_folder_monitor.cpp  test_matrix.cpp  test_orz_types.cpp  test_random.cpp  test_stopwatch.cpp  test_streamconv.cpp
source/pictustest/: CMakeLists.txt  StdAfx.h  main.cpp  pictustest.vcproj  pictustest.vcxproj  pictustest.vcxproj.filters  test_geom.cpp  test_ic_queue.cpp  test_image_dimensions.cpp  test_pan.cpp  test_reg_color_translator.cpp  test_tilemanager.cpp  test_wintypes.cpp  test_zoomstrategy.cpp
