cmake_minimum_required (VERSION 2.8)
project (Pictus)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
list(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_LIST_DIR}/cmake/Modules/")
enable_testing()

add_subdirectory (source)
add_test(NAME OrzTest COMMAND orzTest ${CMAKE_SOURCE_DIR}/bin/Test)
add_test(NAME IllaTest COMMAND illaTest ${CMAKE_SOURCE_DIR}/bin/Test)
add_test(NAME MetadataTest COMMAND MetadataTest ${CMAKE_SOURCE_DIR}/bin/Test)
add_test(NAME PictusTest COMMAND pictusTest ${CMAKE_SOURCE_DIR}/bin/Test)