CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

FIND_PACKAGE(wxWidgets COMPONENTS core base gl net REQUIRED)

INCLUDE_DIRECTORIES(${DEPS_DIRECTORY})
INCLUDE(${wxWidgets_USE_FILE})
LINK_DIRECTORIES(${illa_BINARY_DIR}/illa ${orz_BINARY_DIR}/orz ${wxWidgets_INCLUDE_DIRS})

ADD_EXECUTABLE(LoadTest main.cpp)
TARGET_LINK_LIBRARIES(LoadTest illa orz ${Boost_LIBRARIES})
