CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

FIND_PACKAGE(wxWidgets COMPONENTS core base gl net REQUIRED)

FILE(GLOB ALL_HEADER_SRCS ${CMAKE_CURRENT_SOURCE_DIR}/*.h)
FILE(GLOB ALL_CPP_SRCS ${CMAKE_CURRENT_SOURCE_DIR}/*.cpp)
FILE(GLOB ALL_C_SRCS ${CMAKE_CURRENT_SOURCE_DIR}/*.c)

INCLUDE(${wxWidgets_USE_FILE})
INCLUDE_DIRECTORIES(${DEPS_DIRECTORY} ${wxWidgets_INCLUDE_DIRS})
LINK_DIRECTORIES(${illa_BINARY_DIR}/illa)

ADD_EXECUTABLE(illaTest ${ALL_CPP_SRCS} ${ALL_C_SRCS} ${DEPS_DIRECTORY})
TARGET_LINK_LIBRARIES(illaTest illa UnitTestPP ${Boost_LIBRARIES})
